testing/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-todo
  labels:
    env: testing
    app.kubernetes.io/managed-by: envscale
